# rust-api

./: .env  .envrc  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  start-container.sh
data/: pokemon_data.json
docs/: 00-basics.md  01-getting-started.md  README.md
src/: lib.rs  main.rs  models.rs  schema.rs
