# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html[package]

[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"
authors = ["Guerrero Ariel <arielguerrero1012@gmail.com>"]

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10" }
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = {version = "0.15.6", features = ["cli"]}
serde = { version = "1.0.130", features = ["derive"] } 
serde_json = "1.0.70"
